--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<mat-slider></mat-slider><mat-slider min="1" max="100" step="1" value="1"></mat-slider>
-<button mat-raised-button>Basic</button>
-<button mat-raised-button color="primary">Primary</button>
-<button mat-raised-button color="accent">Accent</button>
-
-<button btn btn-primary>Hello</button>
+<app-sign-in></app-sign-in>
